# SincromisorCLI

./: README.md  SincromisorClient.py  SoundDeviceList.py  pyproject.toml
examples/: config.yml
src/SincromisorClient/: AudioPlayer.py  AudioRecorderProcess.py  AudioSenderTrack.py  DummyAudioRecorder.py  SincromisorConfig.py  SincromisorRTCClient.py  SquareWave.py  __init__.py
