[project]
name = "SincromisorClient"
version = "1.0.0"
description = "SincromisorClient"
authors = [
    { name = "Akito Miura", email = "phenomer@g.hachune.net" }
]
dependencies = [
    "aiortc>=1.9.0",
    "requests>=2.32.3",
    "numpy>=2.1.1",
    "sounddevice>=0.5.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/SincromisorClient"]
